--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">28,987</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">28,185</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.OmayaBlog.Testcases.OmayaBlog1</td><td><a href="#m0">Firsttestcase</a></td><td rowspan="1">1671973972912</td><td rowspan="1">15307</td></tr><tr class="passedeven"><td><a href="#m1">secondtestcase</a></td><td rowspan="1">1671973988224</td><td rowspan="1">13617</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.OmayaBlog.Testcases.OmayaBlog2</td><td><a href="#m0">fourthtestcase</a></td><td rowspan="1">1671976168750</td><td rowspan="1">14811</td></tr><tr class="passedeven"><td><a href="#m1">thirdtestcase</a></td><td rowspan="1">1671976183567</td><td rowspan="1">13300</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.OmayaBlog.Testcases.OmayaBlog1#Firsttestcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.OmayaBlog.Testcases.OmayaBlog1#secondtestcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.OmayaBlog.Testcases.OmayaBlog2#fourthtestcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.OmayaBlog.Testcases.OmayaBlog2#thirdtestcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
