--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Girish\AppData\Local\Temp\testng-eclipse--2039902089\testng-customsuite.xml</span>
+                    <span>C:\Users\Girish\AppData\Local\Temp\testng-eclipse--1980124279\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.OmayaBlog.Testcases.OmayaBlog1" hash-for-method="Firsttestcase">Firsttestcase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.OmayaBlog.Testcases.OmayaBlog2" hash-for-method="fourthtestcase">fourthtestcase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.OmayaBlog.Testcases.OmayaBlog1" hash-for-method="secondtestcase">secondtestcase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.OmayaBlog.Testcases.OmayaBlog2" hash-for-method="thirdtestcase">thirdtestcase</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.OmayaBlog.Testcases.OmayaBlog1</span>
+              <span class="class-name">com.OmayaBlog.Testcases.OmayaBlog2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Firsttestcase">
-                  </a> <!-- Firsttestcase -->
-                  <span class="method-name">Firsttestcase</span>
+                  <a name="fourthtestcase">
+                  </a> <!-- fourthtestcase -->
+                  <span class="method-name">fourthtestcase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="secondtestcase">
-                  </a> <!-- secondtestcase -->
-                  <span class="method-name">secondtestcase</span>
+                  <a name="thirdtestcase">
+                  </a> <!-- thirdtestcase -->
+                  <span class="method-name">thirdtestcase</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Girish\AppData\Local\Temp\testng-eclipse--2039902089\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Girish\AppData\Local\Temp\testng-eclipse--1980124279\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.OmayaBlog.Testcases.OmayaBlog1&quot;/&gt;
+      &lt;class name=&quot;com.OmayaBlog.Testcases.OmayaBlog2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,13 +198,13 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Firsttestcase')
-data.setCell(0, 2, 'com.OmayaBlog.Testcases.OmayaBlog1')
-data.setCell(0, 3, 15307);
+data.setCell(0, 1, 'fourthtestcase')
+data.setCell(0, 2, 'com.OmayaBlog.Testcases.OmayaBlog2')
+data.setCell(0, 3, 14811);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'secondtestcase')
-data.setCell(1, 2, 'com.OmayaBlog.Testcases.OmayaBlog1')
-data.setCell(1, 3, 13617);
+data.setCell(1, 1, 'thirdtestcase')
+data.setCell(1, 2, 'com.OmayaBlog.Testcases.OmayaBlog2')
+data.setCell(1, 3, 13300);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -235,14 +235,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.OmayaBlog.Testcases.OmayaBlog1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.OmayaBlog.Testcases.OmayaBlog2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">Firsttestcase</span>
+                <span class="method-name">fourthtestcase</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">secondtestcase</span>
-                <span class="method-start">15312 ms</span>
+                <span class="method-name">thirdtestcase</span>
+                <span class="method-start">14817 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
