--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9cea0">  <td>22/12/25 18:42:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OmayaBlog1.Firsttestcase()[pri:0, instance:com.OmayaBlog.Testcases.OmayaBlog1@2173f6d9]">Firsttestcase</td> 
+<tr bgcolor="a9cea0">  <td>22/12/25 19:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OmayaBlog2.fourthtestcase()[pri:0, instance:com.OmayaBlog.Testcases.OmayaBlog2@2173f6d9]">fourthtestcase</td> 
   <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>22/12/25 18:43:08</td>   <td>15313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OmayaBlog1.secondtestcase()[pri:0, instance:com.OmayaBlog.Testcases.OmayaBlog1@2173f6d9]">secondtestcase</td> 
+<tr bgcolor="a9cea0">  <td>22/12/25 19:19:43</td>   <td>14818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OmayaBlog2.thirdtestcase()[pri:0, instance:com.OmayaBlog.Testcases.OmayaBlog2@2173f6d9]">thirdtestcase</td> 
   <td>main@770189387</td>   <td></td> </tr>
 </table>
